# triton-anchor

./: CMakeLists.txt  LICENSE  MANIFEST.in  README.md  ROADMAP.md  pyproject.toml  setup.py
.github/scripts/: upstream_watch.py
.github/workflows/: ci.yml  delivery-ci.yml  dispatch-local-ci.yml  local-ci-bridge.yml  receive-local-ci-result.yml  static-checks.yml  upstream_watch.yml
csrc/: CMakeLists.txt
csrc/lib/: CMakeLists.txt
csrc/lib/Conversion/triton-shared/: CMakeLists.txt
csrc/lib/Conversion/triton-shared/StructuredToMemref/: StructuredToMemref.cpp
docker/: build-env.Dockerfile
docs/: build.md  ci_delivery.md  custom_adapter.md  diagnostics.md  local_ci.md  t2_5_adapter_observability.md  t2_5_adapter_robustness_review.md
ops-diagnose-cli/docs/: T2.1-implementation-and-test-results.md  T2.1-ops-diagnose-cli-analysis.md
ops-diagnose-cli/test/: anchor_diag_bad_frontend_kernel.py  anchor_diag_bad_kernels.py  anchor_diag_bad_pplir_kernel.py
python/triton_anchor/: __init__.py  diagnose.py  diagnostics.py  hw_capability.py  pipeline.py
scripts/ci/: build_frontend.sh  collect_delivery_evidence.py  configure_backend_profile.sh  install_backend.sh  install_backend_deps.sh  run_delivery_smoke.sh  run_flaggems_tests.sh  setup_prebuilt_deps.sh
scripts/local_ci/: bridge_gitee_to_github_status.py  compare_compile_time.py  compile_benchmark.py  config.example.env  poll_gitee_and_run.sh  post_gitee_status.py  publish_gitee_result.py  run_delivery_local.sh  run_in_container.sh
tests/: test_smoke.py
triton/: CMakeLists.txt
triton/backends/: __init__.py
(+100 files in other folders)
